--- a/index.css
+++ b/index.css
@@ -33,6 +33,8 @@
   --text-title-h4: #ff5555;
   --text-title-h5: #f1fa8c;
   --text-title-h6: #bd93f4;
+  --text-em: #bd93f4;
+  --text-strong: #ffb86c;
   --canvas-color-1: 255,  85,  85;
   --canvas-color-2: 255, 184, 108;
   --canvas-color-3: 241, 250, 140;
@@ -169,11 +171,11 @@ p {
 
 strong {
   font-weight: var(--font-weight-bold);
-  color: var(--text-title-h2);
+  color: var(--text-strong);
 }
 em {
   font-style: italic;
-  color: var(--text-title-h4);
+  color: var(--text-em);
 }
 
 sub {
